k8s/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus-local
  labels:
    name: nexus-local
    environment: local
